unpackaged/main/default/objects/Biomed_Collection_Op_Center__c/fields/Collection_Operation_ID__c.field-meta.xml
<CustomField>
    <fullName>Collection_Operation_ID__c</fullName>
    <label>Collection Operation ID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>