unpackaged/main/default/objects/Biomed_Collection_Op_Center__c/fields/Fixed_Site_Global_Override__c.field-meta.xml
<CustomField>
    <fullName>Fixed_Site_Global_Override__c</fullName>
    <label>Fixed Site Global Override</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>