unpackaged/main/default/objects/Biomed_Collection_Op_Center__c/fields/Fixed_Site_Web_Schedule_End__c.field-meta.xml
<CustomField>
    <fullName>Fixed_Site_Web_Schedule_End__c</fullName>
    <label>Fixed Site Web Schedule End</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>