unpackaged/main/default/objects/Biomed_Collection_Op_Center__c/fields/Fixed_Site_Web_Schedule_Start__c.field-meta.xml
<CustomField>
    <fullName>Fixed_Site_Web_Schedule_Start__c</fullName>
    <label>Fixed Site Web Schedule Start</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>