unpackaged/main/default/objects/Biomed_Collection_Op_Center__c/fields/FS_Web_Scheduling_Start_Date_Offset__c.field-meta.xml
<CustomField>
    <fullName>FS_Web_Scheduling_Start_Date_Offset__c</fullName>
    <label>FS Web Scheduling Start Date Offset</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>