unpackaged/main/default/objects/Biomed_Collection_Op_Center__c/fields/Mobile_Web_Schedule_Start__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Web_Schedule_Start__c</fullName>
    <label>Mobile Web Schedule Start</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>