unpackaged/main/default/objects/Biomed_Collection_Op_Center__c/fields/Mobile_Web_Scheduling_End_Time_Offset__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Web_Scheduling_End_Time_Offset__c</fullName>
    <label>Mobile Web Scheduling End Time Offset</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>