unpackaged/main/default/objects/Biomed_Collection_Op_Center__c/fields/Mobile_Web_Scheduling_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Web_Scheduling_Start_Time__c</fullName>
    <label>Mobile Web Scheduling Start Time</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Time</valueSetName>
    </valueSet>
</CustomField>