unpackaged/main/default/objects/Biomed_Collection_Op_Center__c/fields/sked_Breakdown_Time_Threshold__c.field-meta.xml
<CustomField>
    <fullName>sked_Breakdown_Time_Threshold__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Breakdown Time Threshold</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>