unpackaged/main/default/objects/Biomed_Collection_Op_Center__c/fields/sked_Collections_Manager__c.field-meta.xml
<CustomField>
    <fullName>sked_Collections_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Collections Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Collections_Manager_Collection_Ops</relationshipName>
    <type>Lookup</type>
</CustomField>