unpackaged/main/default/objects/Biomed_Collection_Op_Center__c/fields/sked_Daily_Guaranteed_Hours__c.field-meta.xml
<CustomField>
    <fullName>sked_Daily_Guaranteed_Hours__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Daily Guaranteed Hours</label>
    <type>Checkbox</type>
</CustomField>