unpackaged/main/default/objects/Biomed_Collection_Op_Center__c/fields/sked_High_Weight__c.field-meta.xml
<CustomField>
    <fullName>sked_High_Weight__c</fullName>
    <label>High Weight</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>