unpackaged/main/default/objects/Biomed_Collection_Op_Center__c/fields/sked_Location_Preferences_Score__c.field-meta.xml
<CustomField>
    <fullName>sked_Location_Preferences_Score__c</fullName>
    <label>Location Preferences Score</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>sked_Optimizer_Scoring_Factor</valueSetName>
    </valueSet>
</CustomField>