unpackaged/main/default/objects/Biomed_Collection_Op_Center__c/fields/sked_Location_Restrictions__c.field-meta.xml
<CustomField>
    <fullName>sked_Location_Restrictions__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Location Restrictions</label>
    <type>Checkbox</type>
</CustomField>