unpackaged/main/default/objects/Biomed_Collection_Op_Center__c/fields/sked_Lunch_Break__c.field-meta.xml
<CustomField>
    <fullName>sked_Lunch_Break__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indicates whether the lunch break durations are populated by default for drives in this Collection Operation</inlineHelpText>
    <label>Lunch Break</label>
    <type>Checkbox</type>
</CustomField>