unpackaged/main/default/objects/Biomed_Collection_Op_Center__c/fields/sked_Maximum_Drive_End_Time__c.field-meta.xml
<CustomField>
    <fullName>sked_Maximum_Drive_End_Time__c</fullName>
    <defaultValue>TIMEVALUE(&#39;23:59:00.000&#39;)</defaultValue>
    <label>Maximum Drive End Time</label>
    <type>Time</type>
</CustomField>