unpackaged/main/default/objects/Biomed_Collection_Op_Center__c/fields/sked_Maximum_Shift_Length_Threshold__c.field-meta.xml
<CustomField>
    <fullName>sked_Maximum_Shift_Length_Threshold__c</fullName>
    <defaultValue>600</defaultValue>
    <label>Maximum Shift Length Threshold</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>