unpackaged/main/default/objects/Biomed_Collection_Op_Center__c/fields/sked_Maximum_Weekly_Hours__c.field-meta.xml
<CustomField>
    <fullName>sked_Maximum_Weekly_Hours__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Maximum Weekly Hours</label>
    <type>Checkbox</type>
</CustomField>