unpackaged/main/default/objects/Biomed_Collection_Op_Center__c/fields/sked_Medium_Weight__c.field-meta.xml
<CustomField>
    <fullName>sked_Medium_Weight__c</fullName>
    <label>Medium Weight</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>