unpackaged/main/default/objects/Biomed_Collection_Op_Center__c/fields/sked_Regulated_Medi_Screener_Drive_Types__c.field-meta.xml
<CustomField>
    <fullName>sked_Regulated_Medi_Screener_Drive_Types__c</fullName>
    <label>Regulated Medical Screener Drive Types</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mobile</fullName>
            </value>
            <value>
                <fullName>Fixed Site</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>