unpackaged/main/default/objects/Biomed_Collection_Op_Center__c/fields/sked_Relocated_Driver_TT_from_Drive_CO__c.field-meta.xml
<CustomField>
    <fullName>sked_Relocated_Driver_TT_from_Drive_CO__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Relocated Driver TT from Drive CO</label>
    <type>Checkbox</type>
</CustomField>