unpackaged/main/default/objects/Biomed_Collection_Op_Center__c/fields/sked_Require_Number_of_Rest_Breaks__c.field-meta.xml
<CustomField>
    <fullName>sked_Require_Number_of_Rest_Breaks__c</fullName>
    <defaultValue>false</defaultValue>
    <description>New Field added for HRP-11291</description>
    <label>Require Number of Rest Breaks</label>
    <type>Checkbox</type>
</CustomField>