unpackaged/main/default/objects/Biomed_Collection_Op_Center__c/fields/sked_Require_Start_End_Times_Meal_Break__c.field-meta.xml
<CustomField>
    <fullName>sked_Require_Start_End_Times_Meal_Break__c</fullName>
    <defaultValue>false</defaultValue>
    <description>New Field added for HRP-11291</description>
    <label>Require Start/End Times for Meal Breaks</label>
    <type>Checkbox</type>
</CustomField>