unpackaged/main/default/objects/Biomed_Collection_Op_Center__c/fields/sked_Restricts_to_Full_day_PTO__c.field-meta.xml
<CustomField>
    <fullName>sked_Restricts_to_Full_day_PTO__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Restricts to Full-day PTO</label>
    <type>Checkbox</type>
</CustomField>