unpackaged/main/default/objects/Biomed_Collection_Op_Center__c/fields/sked_Scheduling_Manager__c.field-meta.xml
<CustomField>
    <fullName>sked_Scheduling_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Scheduling Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Scheduling_Manager_Collection_Ops</relationshipName>
    <type>Lookup</type>
</CustomField>