unpackaged/main/default/objects/Biomed_Collection_Op_Center__c/fields/sked_Skip_Last_Appointment__c.field-meta.xml
<CustomField>
    <fullName>sked_Skip_Last_Appointment__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Skip appointment creation for the last interval</inlineHelpText>
    <label>Skip Last Appointment</label>
    <type>Checkbox</type>
</CustomField>