unpackaged/main/default/objects/Biomed_Collection_Op_Center__c/fields/sked_Skip_Last_Appointment_For__c.field-meta.xml
<CustomField>
    <fullName>sked_Skip_Last_Appointment_For__c</fullName>
    <label>Skip Last Appointment For</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>sked_Drive_Types</valueSetName>
    </valueSet>
</CustomField>