unpackaged/main/default/objects/Biomed_Collection_Op_Center__c/fields/sked_Start_Time_Offset__c.field-meta.xml
<CustomField>
    <fullName>sked_Start_Time_Offset__c</fullName>
    <label>Start Time Offset (mins)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>15</fullName>
            </value>
            <value>
                <fullName>30</fullName>
            </value>
            <value>
                <fullName>45</fullName>
            </value>
            <value>
                <fullName>60</fullName>
            </value>
            <value>
                <fullName>75</fullName>
            </value>
            <value>
                <fullName>90</fullName>
            </value>
            <value>
                <fullName>105</fullName>
            </value>
            <value>
                <fullName>120</fullName>
            </value>
            <value>
                <fullName>135</fullName>
            </value>
            <value>
                <fullName>150</fullName>
            </value>
            <value>
                <fullName>165</fullName>
            </value>
            <value>
                <fullName>180</fullName>
            </value>
            <value>
                <fullName>195</fullName>
            </value>
            <value>
                <fullName>210</fullName>
            </value>
            <value>
                <fullName>225</fullName>
            </value>
            <value>
                <fullName>240</fullName>
            </value>
            <value>
                <fullName>255</fullName>
            </value>
            <value>
                <fullName>270</fullName>
            </value>
            <value>
                <fullName>285</fullName>
            </value>
            <value>
                <fullName>300</fullName>
            </value>
            <value>
                <fullName>315</fullName>
            </value>
            <value>
                <fullName>330</fullName>
            </value>
            <value>
                <fullName>345</fullName>
            </value>
            <value>
                <fullName>360</fullName>
            </value>
            <value>
                <fullName>375</fullName>
            </value>
            <value>
                <fullName>390</fullName>
            </value>
            <value>
                <fullName>405</fullName>
            </value>
            <value>
                <fullName>420</fullName>
            </value>
            <value>
                <fullName>435</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>