unpackaged/main/default/objects/Biomed_Collection_Op_Center__c/fields/sked_Travel_Time_Included_Mobile__c.field-meta.xml
<CustomField>
    <fullName>sked_Travel_Time_Included_Mobile__c</fullName>
    <label>Travel Time Included - Mobile</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Drivers Only</fullName>
            </value>
            <value>
                <fullName>All Roles</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>