unpackaged/main/default/objects/Biomed_Collection_Op_Center__c/fields/sked_Turnaround_Time__c.field-meta.xml
<CustomField>
    <fullName>sked_Turnaround_Time__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Turnaround Time</label>
    <type>Checkbox</type>
</CustomField>