unpackaged/main/default/objects/Biomed_Collection_Op_Center__c/fields/sked_Turnaround_Time_Duration__c.field-meta.xml
<CustomField>
    <fullName>sked_Turnaround_Time_Duration__c</fullName>
    <defaultValue>11</defaultValue>
    <label>Turnaround Time Duration (hrs)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>