unpackaged/main/default/objects/Biomed_Collection_Op_Center__c/fields/Staging_Location_Geolocation__c.field-meta.xml
<CustomField>
    <fullName>Staging_Location_Geolocation__c</fullName>
    <label>Staging Location Geolocation</label>
    <scale>6</scale>
    <type>Location</type>
</CustomField>