unpackaged/main/default/objects/Biomed_Collection_Op_Center__c/validationRules/Prevent_Collections_Users_Edit_Access.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Collections_Users_Edit_Access</fullName>
    <active>true</active>
    <description>Collections and DRD User should not be able to Edit a Collection Operation.</description>
    <errorConditionFormula>AND(
OR(
$Profile.Name = &quot;Collections&quot;,
$Profile.Name = &quot;Collection Management&quot;,
$Profile.Name = &quot;DRD Manager&quot;,
$Profile.Name = &quot;DRD Profile&quot;
),
NOT(ISNEW())
)</errorConditionFormula>
    <errorMessage>Collections and DRD users do not have edit access.</errorMessage>
</ValidationRule>