unpackaged/main/default/objects/Biomed_Collection_Op_Center__c/validationRules/RequiresUnpaidLunchBreakDuration.validationRule-meta.xml
<ValidationRule>
    <fullName>RequiresUnpaidLunchBreakDuration</fullName>
    <active>true</active>
    <errorConditionFormula>sked_Lunch_Break_Before_Draw_Hours__c == TRUE
&amp;&amp; ISBLANK(sked_Unpaid_Lunch_Break_Duration__c)</errorConditionFormula>
    <errorMessage>Unpaid Lunch Break Duration is required if Lunch Break Before Draw Hours is set.</errorMessage>
</ValidationRule>