unpackaged/main/default/objects/Biomed_Collection_Op_Center__c/listViews/Albany_NY_Queue_Biomed_Collection_Op_Center.listView-meta.xml
<ListView>
    <fullName>Albany_NY_Queue_Biomed_Collection_Op_Center</fullName>
    <filterScope>Queue</filterScope>
    <label>Albany NY - Queue</label>
    <queue>Albany_NY_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>