unpackaged/main/default/objects/Biomed_Collection_Op_Center__c/listViews/Altoona_PA_Queue_Biomed_Collection_Op_Center.listView-meta.xml
<ListView>
    <fullName>Altoona_PA_Queue_Biomed_Collection_Op_Center</fullName>
    <filterScope>Queue</filterScope>
    <label>Altoona PA - Queue</label>
    <queue>Altoona_PA_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>