unpackaged/main/default/objects/Biomed_Collection_Op_Center__c/listViews/Arlington_TX_Queue_Biomed_Collection_Op_Center.listView-meta.xml
<ListView>
    <fullName>Arlington_TX_Queue_Biomed_Collection_Op_Center</fullName>
    <filterScope>Queue</filterScope>
    <label>Arlington TX - Queue</label>
    <queue>Arlington_TX_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>