unpackaged/main/default/objects/Biomed_Collection_Op_Center__c/listViews/Athens_GA_Queue_Biomed_Collection_Op_Center.listView-meta.xml
<ListView>
    <fullName>Athens_GA_Queue_Biomed_Collection_Op_Center</fullName>
    <filterScope>Queue</filterScope>
    <label>Athens GA - Queue</label>
    <queue>Athens_GA_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>