unpackaged/main/default/objects/Biomed_Collection_Op_Center__c/listViews/Baltimore_MD_Queue_Biomed_Collection_Op_Center.listView-meta.xml
<ListView>
    <fullName>Baltimore_MD_Queue_Biomed_Collection_Op_Center</fullName>
    <filterScope>Queue</filterScope>
    <label>Baltimore MD - Queue</label>
    <queue>Baltimore_MD_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>