unpackaged/main/default/objects/Biomed_Collection_Op_Center__c/listViews/Birmingham_AL_Queue_Biomed_Collection_Op_Center.listView-meta.xml
<ListView>
    <fullName>Birmingham_AL_Queue_Biomed_Collection_Op_Center</fullName>
    <filterScope>Queue</filterScope>
    <label>Birmingham AL - Queue</label>
    <queue>Birmingham_AL_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>