unpackaged/main/default/objects/Biomed_Collection_Op_Center__c/listViews/Boise_ID_Queue_Biomed_Collection_Op_Center.listView-meta.xml
<ListView>
    <fullName>Boise_ID_Queue_Biomed_Collection_Op_Center</fullName>
    <filterScope>Queue</filterScope>
    <label>Boise ID - Queue</label>
    <queue>Boise_ID_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>