unpackaged/main/default/objects/Biomed_Collection_Op_Center__c/listViews/Bozeman_MT_Queue_Biomed_Collection_Op_Center.listView-meta.xml
<ListView>
    <fullName>Bozeman_MT_Queue_Biomed_Collection_Op_Center</fullName>
    <filterScope>Queue</filterScope>
    <label>Bozeman MT - Queue</label>
    <queue>Bozeman_MT_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>