unpackaged/main/default/objects/Biomed_Collection_Op_Center__c/listViews/Burlington_VT_Queue_Biomed_Collection_Op_Center.listView-meta.xml
<ListView>
    <fullName>Burlington_VT_Queue_Biomed_Collection_Op_Center</fullName>
    <filterScope>Queue</filterScope>
    <label>Burlington VT - Queue</label>
    <queue>Burlington_VT_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>