unpackaged/main/default/objects/Biomed_Collection_Op_Center__c/listViews/Camden_NJ_Queue_Biomed_Collection_Op_Center.listView-meta.xml
<ListView>
    <fullName>Camden_NJ_Queue_Biomed_Collection_Op_Center</fullName>
    <filterScope>Queue</filterScope>
    <label>NJ Philly PA South - Queue</label>
    <queue>NJ_Philly_PA_South_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>