unpackaged/main/default/objects/Biomed_Collection_Op_Center__c/listViews/Charlotte_NC_Queue_Biomed_Collection_Op_Center.listView-meta.xml
<ListView>
    <fullName>Charlotte_NC_Queue_Biomed_Collection_Op_Center</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>Charlotte NC - Queue</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>