unpackaged/main/default/objects/Biomed_Collection_Op_Center__c/listViews/Cleveland_OH_East_Queue_Biomed_Collection_Op_Center.listView-meta.xml
<ListView>
    <fullName>Cleveland_OH_East_Queue_Biomed_Collection_Op_Center</fullName>
    <filterScope>Queue</filterScope>
    <label>Cleveland OH East - Queue</label>
    <queue>Cleveland_OH_East_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>