unpackaged/main/default/objects/Biomed_Collection_Op_Center__c/listViews/Columbia_MO_Queue_Biomed_Collection_Op_Center.listView-meta.xml
<ListView>
    <fullName>Columbia_MO_Queue_Biomed_Collection_Op_Center</fullName>
    <filterScope>Queue</filterScope>
    <label>Columbia MO - Queue</label>
    <queue>Columbia_MO_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>