unpackaged/main/default/objects/Biomed_Collection_Op_Center__c/listViews/Columbus_GA_Queue_Biomed_Collection_Op_Center.listView-meta.xml
<ListView>
    <fullName>Columbus_GA_Queue_Biomed_Collection_Op_Center</fullName>
    <filterScope>Queue</filterScope>
    <label>Columbus GA - Queue</label>
    <queue>Columbus_GA_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>